fix navbar hint visibility bug

--- a/public/styles/main/submit.css
+++ b/public/styles/main/submit.css
@@ -78,7 +78,7 @@ body {
 
 /* ---------------------------------- Form ---------------------------------- */
 .submit-main-container {
-  padding: 2.4rem 0;
+  padding: 2.4rem 0 0 0;
 }
 
 form {
