--- a/public/styles/static/index.css
+++ b/public/styles/static/index.css
@@ -4,7 +4,7 @@ body {
 
 /* --------------------------------- Splash --------------------------------- */
 .splash-container {
-  min-height: 85vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
